kubernetes/snapshot-minecraft-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilapia-spigot-dynamic
  labels:
    app: tilapia-spigot-dynamic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tilapia-spigot-dynamic
  template:
    metadata:
      labels:
        app: tilapia-spigot-dynamic
    spec:
      containers:
        - name: spigot-1-8
          imagePullPolicy: Always
          image: docker.tilapiamc.net:443/repository/docker/tilapia-spigot:snapshot
          ports:
            - containerPort: 25565
          tty: true
          stdin: true
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/bash
                  - -c
                  - kill $(pidof java)
          livenessProbe:
            exec:
              command:
                - ls
                - /opt/minecraft/SERVER_STARTED
            timeoutSeconds: 120

      terminationGracePeriodSeconds: 600
