kubernetes/snapshot-deployment.yaml
# MySQL / MariaDB

---
apiVersion: v1
kind: Service
metadata:
  name: tilapia-mysql
  labels:
    app: game-central
spec:
  ports:
    - port: 3306
  selector:
    app: game-central
    tier: mariadb
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilapia-mysql
  labels:
    app: game-central
spec:
  selector:
    matchLabels:
      app: game-central
      tier: mariadb
  template:
    metadata:
      labels:
        app: game-central
        tier: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb-persistent-storage
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: tilapia-mysql-volume-claim




# Game Central





---
apiVersion: v1
kind: Service
metadata:
  name: tilapia-game-central
  labels:
    app: game-central
spec:
  ports:
    - port: 8080
  selector:
    app: tilapia
    tier: game-central
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilapia-game-central
  labels:
    app: game-central
spec:
  selector:
    matchLabels:
      app: game-central
  template:
    metadata:
      labels:
        app: game-central
    spec:
      containers:
        - name: game-central
          image: docker.tilapiamc.net:443/repository/docker/tilapia-game-central:snapshot
          ports:
            - containerPort: 8080
          tty: true
