kubernetes/snapshot-core-deployment.yaml
# MySQL / MariaDB

---
apiVersion: v1
kind: Service
metadata:
  name: tilapia-mysql
  labels:
    app: game-central
spec:
  ports:
    - port: 3306
  selector:
    app: game-central-mariadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilapia-mysql
  labels:
    app: game-central
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: game-central-mariadb
  template:
    metadata:
      labels:
        app: game-central-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb-persistent-storage
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: tilapia-mysql-volume-claim
      restartPolicy: Always


# Game Central

---
apiVersion: v1
kind: Service
metadata:
  name: tilapia-game-central
  labels:
    app: game-central
spec:
  ports:
    - port: 8080
  selector:
    app: game-central
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilapia-game-central
  labels:
    app: game-central
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: game-central
  template:
    metadata:
      labels:
        app: game-central
    spec:
      containers:
        - name: game-central
          image: docker.tilapiamc.net:443/repository/docker/tilapia-game-central:snapshot
          ports:
            - containerPort: 8080
          tty: true
      restartPolicy: Always


# Proxy
---
apiVersion: v1
kind: Service
metadata:
  name: tilapia-proxy
  labels:
    app: minecraft-proxy
spec:
  ports:
    - port: 25565
      targetPort: 25565
  selector:
    app: minecraft-proxy
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilapia-proxy
  labels:
    app: minecraft-proxy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft-proxy
  template:
    metadata:
      labels:
        app: minecraft-proxy
    spec:
      containers:
        - name: minecraft-proxy
          image: docker.tilapiamc.net:443/repository/docker/tilapia-proxy:snapshot
          ports:
            - containerPort: 25565
          tty: true
          stdin: true
      restartPolicy: Always



# Expose Proxy

---
kind: Ingress
apiVersion: networking.k8s.io/v1
---
